src/scss/components/FolderPicker.scss
// SPDX-License-Identifier: Apache-2.0
//
// SPDX-FileCopyrightText: © 2024 Tenstorrent AI ULC

.folder-picker-menu-item {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;

    .bp5-menu-item {
        padding-left: 7px;
    }

    > li {
        flex-grow: 1;
        flex-shrink: 1;
    }
}

.folder-picker-button {
    .bp5-button-text {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
    }
}

